# MiddleAges

./: CMakeLists.txt  game.sh
src/: ai.c  ai.h  command.c  command.h  engine.c  engine.h  global.h  list.c  list.h  middle_ages.c  move_test.c  parse.c  parse.h  pawn.c  pawn.h  preview.c  preview.h  utils.h
